fixed the white space above header

--- a/src/app/onepage-header/onepage-header.component.css
+++ b/src/app/onepage-header/onepage-header.component.css
@@ -1,5 +1,5 @@
 #header_id{
-    margin-top: 3.5rem;
+    margin-top: 2rem;
     background-image: url('backgroundphoto.webp');
     background-size: cover;
     background-position: center;
